--- a/spring-boot-starter-transaction-ons-console/pom.xml
+++ b/spring-boot-starter-transaction-ons-console/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>spring-boot-starter-transaction-ons-console</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>spring-boot-starter-transaction-ons-console</name>
     <dependencies>
 
