--- a/spring-boot-starter-transaction-ons-server/pom.xml
+++ b/spring-boot-starter-transaction-ons-server/pom.xml
@@ -6,9 +6,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>spring-boot-starter-transaction-ons</artifactId>
+    <artifactId>spring-boot-starter-transaction-ons-server</artifactId>
     <packaging>jar</packaging>
-    <name>spring-boot-starter-transaction-ons</name>
+    <name>spring-boot-starter-transaction-ons-server</name>
     <dependencies>
 
         <dependency>
@@ -16,8 +16,13 @@
             <artifactId>spring-boot-starter-transaction-ons-protocol</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.throwable</groupId>
+            <artifactId>spring-boot-starter-transaction-ons-orm</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
-        <finalName>spring-boot-starter-transaction-ons</finalName>
+        <finalName>spring-boot-starter-transaction-ons-server</finalName>
     </build>
 </project>
